--- a/src/components/Items/Item.module.css
+++ b/src/components/Items/Item.module.css
@@ -55,6 +55,12 @@
     grid-row: 1 / span 1;
 
     aspect-ratio: 1 / 1;
+
+    margin: 30px;
+    margin-bottom: 0;
+    border-radius: 50px /* <- TODO: [0] why this needs to be here 2x to propperly work? */;
+
+    box-shadow: #00000077 -25px 25px 0px; /* <- TODO: Paralax effect on shadow */
 }
 
 .item .personImageContainer img {
@@ -64,9 +70,10 @@
 
     width: 100%;
     height: 100%;
-    border-radius: 50px;
+    border-radius: 50px /* <- TODO: [0] why this needs to be here 2x to propperly work? */;
 
-    padding: 10px;
+    background: radial-gradient(circle at center, #b4952c 0%, #000000 120%)
+        /* <- TODO: [💫] What is the propper place for this radial-gradient, in JSX or in CSS module + DRY */;
 
     object-fit: cover;
 }
