--- a/src/components/Items/Item.module.css
+++ b/src/components/Items/Item.module.css
@@ -72,7 +72,7 @@
     height: 100%;
     border-radius: 50px /* <- TODO: [0] why this needs to be here 2x to propperly work? */;
 
-    background: radial-gradient(circle at center, #b4952c 0%, #000000 120%)
+    background-image: radial-gradient(circle at center, #b4952c 0%, #000000 120%)
         /* <- TODO: [💫] What is the propper place for this radial-gradient, in JSX or in CSS module + DRY */;
 
     object-fit: cover;
