--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -16,6 +16,19 @@
     margin-bottom: 50px;
 }
 
+.section > div /* <- Article */ > p {
+    /*/
+    outline: 1px dotted yellow;
+    /**/
+
+    display: block;
+    font-size: 20px /* <- [🔠] Make one place for font-size */;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+    text-align: center;
+}
+
 .section > a {
     /*/
     outline: 1px dotted magenta;
