--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,19 +24,22 @@ body {
 
 /* TODO: [🎨] ACRY all colors in one place HERE */
 
-.button,
-button {
-    /* !!! Better + var colors + hover + margin + mobile*/
-
-    border: solid 1.5px rgb(78, 78, 78);
-    background-color: rgb(7, 2, 2);
-    color: rgb(78, 78, 78);
+.button /* <- Note: Not using <button> but <Link className="button"*/ {
+    border: solid 1px var(--normal-text-color);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: var(--normal-text-color);
     border-radius: 6px;
     padding: 7px 18px;
-    font-size: 0.9em;
     margin: 10px;
     cursor: pointer;
     display: inline-block;
-    -webkit-text-decoration: none;
     text-decoration: none;
+
+    transition: all 0.05s ease-in-out;
+}
+
+.button:hover {
+    background-color: rgba(44, 44, 44, 0.705);
+    color: var(--highlighted-text-color);
+    box-shadow: var(--highlighted-text-color) 0 0 5px;
 }
