Unite name of the section class

--- a/src/components/Items/Item.module.css
+++ b/src/components/Items/Item.module.css
@@ -12,7 +12,7 @@
     /*margin: 10px;*/
 }
 
-.item .imageContainer /* <- TODO: [🦂] CSS class imageContainer vs image-container*/ {
+.item .imageContainer {
     /*/
     outline: 1px dotted red;
     /**/
