--- a/src/sections/50-MyProjects/MyProjects.module.css
+++ b/src/sections/50-MyProjects/MyProjects.module.css
@@ -1,3 +1,7 @@
-.myProjects /* <- [🦂]  TODO: CSS class myProjects vs my-projects*/ {
+.MyProjectsSection {
+    /*/
+    outline: 1px dotted green;
+    /**/
+
     /* TODO: Use or remove empty css */
 }
