--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,7 @@ body {
 }
 
 /* TODO: [🎨] ACRY all colors in one place HERE */
+/* TODO: Make isolated components from <Button/>, <Button isFeatured/> and <Emoji/>*/
 
 .button /* <- Note: Not using <button> but <Link className="button"*/ {
     border: solid 1px var(--normal-text-color);
@@ -37,6 +38,11 @@ body {
     background-color: rgba(14, 120, 134, 0.884);
     padding: 14px 36px;
     font-size: 1.5em;
+    transition: 0.2s box-shadow ease-in-out;
+}
+
+.button.button-featured:hover {
+    box-shadow: rgba(92, 176, 209, 0.9) 0 0 70px;
 }
 
 .emoji {
@@ -47,4 +53,26 @@ body {
     /* filter: invert(100%); */
     padding: 0;
     margin: -3px;
+}
+
+.button.button-featured:hover .emoji {
+    animation: hue-rotate 2s infinite, wobble 0.3s infinite alternate;
+}
+
+@keyframes hue-rotate {
+    0% {
+        filter: hue-rotate(0deg);
+    }
+    100% {
+        filter: hue-rotate(360deg);
+    }
+}
+
+@keyframes wobble {
+    0% {
+        transform: rotate(-10deg);
+    }
+    100% {
+        transform: rotate(10deg);
+    }
 }
