--- a/src/styles/common.module.css
+++ b/src/styles/common.module.css
@@ -69,11 +69,16 @@
     color: var(--normal-text-color);
 }
 
+/* !!! move to welcome section */
 .page h1,
 .page h2,
 .page b,
 .page a:hover {
     color: var(--highlighted-text-color);
+}
+
+.page h1{
+line-height: 20%;
 }
 
 .page h2 {
