--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -22,7 +22,7 @@
     /**/
 
     display: block;
-    font-size: 20px /* <- [🔠] Make one place for font-size */;
+    font-size: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
 
