--- a/src/sections/20-PavolHejny/PavolHejny.module.css
+++ b/src/sections/20-PavolHejny/PavolHejny.module.css
@@ -8,23 +8,63 @@
     text-align: left;
 }
 
-.PavolHejnySection img {
+.person {
+    z-index: 3;
+    position: relative;
+
     display: block;
     float: left;
+    shape-outside: circle(54%); /* <- Note: For some reason url(#squircle) is not working here*/
 
     width: 250px;
     height: 250px;
     margin-right: 25px;
     margin-bottom: 25px;
-    border-radius: 50px;
+    border-radius: 50px; /* <- TODO: !!! ACRY irelevant */
 
     box-shadow: #00000077 -25px 25px 0px; /* <- TODO: Paralax effect on shadow */
-    background-image: radial-gradient(circle at center, #b4952c 0%, #000000 120%)
-        /* <- TODO: [💫] What is the propper place for this radial-gradient, in JSX or in CSS module + DRY */;
+    /* <- TODO: Make box-shadow work after clip-path effect */
+
+    /*background: #ccc; /* <- !!![8] Remove*/
+    /*backdrop-filter: blur(0); /* <- !!![8] Remove*/
+
+    overflow: clip;
+    /*clip-path: margin-box;/**/
+    /*clip-path: margin-box circle(25% at 25% 25%);/**/
+    /*clip-path: url('../../../public/masks/person.png'); /**/
+    clip-path: url(#squircle) /* <- @see https://codepen.io/nklunder/full/ZrxbZO*/;
+}
+
+.person img {
+    z-index: 2;
+    position: relative;
+
+    width: 100%;
+    height: 100%;
+
+    /* <- TODO: [💫] What is the propper place for this radial-gradient, in JSX or in CSS module + DRY */
+}
+
+.person .personBackground {
+    /*display: none; /* <- !!![8] Remove*/
+
+    z-index: 1;
+
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-image: radial-gradient(
+        circle at 20% 50%,
+        #b4952c 0%,
+        #000000 120%
+    ); /* <- TODO: !! Maybe better background */
+    /*background-image: url(../../../public/patterns/Pavol_Hejn_Wallpaper_by_Titian_1177b75d-6e65-49ba-ba53-c3a5861dbc8d.png);*/
 }
 
 @media screen and (max-width: 400px) {
-    .PavolHejnySection img {
+    .person {
         width: 50vw;
         height: auto;
     }
