--- a/src/sections/20-PavolHejny/PavolHejny.module.css
+++ b/src/sections/20-PavolHejny/PavolHejny.module.css
@@ -82,11 +82,11 @@
         height: auto;
     }
 
-personShadow .personShadowInner {
+.personShadow .personShadowInner {
     width: 50vw;
     height: 50vw;
 
-border: 1px solid red;
+/*border: 1px solid red;*/
     /*!!! use aspect ratio*/
 }
 }
