--- a/src/styles/common.module.css
+++ b/src/styles/common.module.css
@@ -69,7 +69,7 @@
     color: var(--normal-text-color);
 }
 
-/* TODO: !!! move to welcome section */
+/* TODO: !! move to welcome section */
 .page h1,
 .page h2,
 .page b,
