--- a/src/sections/70-Contact/Contact.module.css
+++ b/src/sections/70-Contact/Contact.module.css
@@ -1,6 +1,3 @@
-
-
-
 .vcard {
     /*/
     outline: 1px dotted green;
@@ -14,6 +11,8 @@
     align-items: center;
 
     padding-top: 30px;
+
+    margin-bottom: 50px;
 }
 
 .vcard img {
