Better design and Article

--- a/src/components/Article/Article.module.css
+++ b/src/components/Article/Article.module.css
@@ -1,4 +1,177 @@
-
-
-.Article{  
+.Article {
+    margin-top: 0px;
+    text-align: center;
 }
+
+.Article .handritten {
+    font-size: 20px;
+}
+
+.Article h1,
+.Article h2,
+.Article h3,
+.Article h4,
+.Article h5,
+.Article h6 {
+    display: block;
+    margin: auto;
+    width: fit-content;
+    text-align: center;
+}
+
+.Article h1,
+.Article h2 {
+    font-weight: bold;
+}
+
+.Article h1 {
+    line-height: 110%;
+    margin-bottom: 0px;
+    font-size: 65px;
+}
+@media only screen and (max-width: 600px) {
+    .Article h1 {
+        font-size: 55px;
+    }
+}
+@media only screen and (max-width: 300px) {
+    .Article h1 {
+        font-size: 38px;
+    }
+}
+
+.Article h2 {
+    margin-bottom: 10px;
+}
+
+.Article h2 {
+    font-size: 29px;
+
+    padding: 0;
+    border-bottom: 2px solid rgba(245, 224, 185, 0.5); /* <- [🎨] */
+}
+
+.Article h3 {
+    font-size: 25px;
+    margin-top: 30px;
+    padding: 0;
+    border-bottom: 1.5px solid rgba(245, 224, 185, 0.5); /* <- [🎨] */
+}
+
+.Article p {
+    text-align: left;
+}
+
+.Article p:has(:global(.button)) {
+    text-align: center;
+}
+
+.Article ol,
+.Article ul {
+    /*/
+    outline: 1px dotted rgb(255, 38, 38) !important;
+    /**/
+
+    text-align: left;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+@media (max-width: 600px) {
+    .Article ol,
+    .Article ul {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+}
+
+.Article ul {
+    list-style-type: disc;
+}
+.Article ol {
+    list-style-type: decimal;
+}
+.Article hr {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    background-color: rgba(245, 224, 185, 0.5); /* <- [🎨] */
+    /* <- Note: This is really a line not a fill, so using palette-3 not palette-2 */
+    height: 2px;
+    border: none;
+    outline: none;
+}
+
+/* Note: Block components: */
+.Article blockquote,
+.Article iframe,
+.Article form {
+    display: block;
+    margin-top: 45px /* <- TODO: [🧠] What is the best practise to define margin-top, margin-bottom OR both */;
+}
+
+.Article blockquote {
+    font-size: 1.2em;
+    border: 1px solid rgba(245, 224, 185, 0.5); /* <- [🎨] */
+    padding: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-radius: 20px;
+}
+
+.Article blockquote p {
+    text-align: center;
+}
+
+.Article blockquote hr {
+    margin: 10px;
+}
+
+.Article img {
+    max-width: 100%;
+    height: auto;
+}
+.Article iframe {
+    width: calc(100% - 20px);
+    aspect-ratio: 3/2;
+    border: none;
+}
+
+@media only screen and (max-width: 600px) {
+    /* 📱 Smartphones */
+
+    .Article iframe {
+        aspect-ratio: 2/3;
+    }
+}
+
+.Article .button {
+    display: inline-block;
+    border: 1px solid rgba(var(--palette-1-triplet), 0.8);
+    background-color: rgba(var(--palette-2-triplet), 0.8);
+    box-shadow: 0 0 20px rgba(var(--palette-4-triplet), 0.5);
+    color: rgba(var(--palette-1-triplet), 0.8);
+    border-radius: 6px;
+    padding: 7px 18px;
+    margin: 10px;
+    cursor: pointer;
+    text-decoration: none;
+    transition: all 0.2s ease-in-out;
+    font-size: 25px;
+}
+.Article .button:hover {
+    filter: hue-rotate(90deg);
+}
+.Article .button.primary {
+    color: rgba(245, 224, 185, 0.5); /* <- [🎨] */
+    border: 1px solid rgba(245, 224, 185, 0.5); /* <- [🎨] */
+}
+
+.Article [contenteditable] {
+    outline: 0px solid transparent;
+}
+
+/*
+ * TODO: [🧠] Should be button in exported article css; <call-to-action> button is exported together with custom elements
+ */
