--- a/src/sections/100-AiTraining/AiTraining.module.css
+++ b/src/sections/100-AiTraining/AiTraining.module.css
@@ -9,7 +9,12 @@
 .variants > div > div {
     /* Note: [✌] Two nested divs to use <Items/> together with nice outline */
     outline: 1px solid rgba(245, 224, 185, 0.5); /* <- [🎨] */
-    border-radius: 30px;
+    border-radius: 20px;
     margin: 10px;
     padding: 10px;
+}
+
+.variants h3 {
+    margin-top: unset;
+    border-bottom: unset;
 }
