--- a/src/components/BackgroundCanvas/BackgroundCanvas.module.css
+++ b/src/components/BackgroundCanvas/BackgroundCanvas.module.css
@@ -1,8 +1,5 @@
-.BackgroundCanvas {
-    /* TODO: Use or remove empty css */
-}
-
-.canvas {
-    image-rendering: pixelated;
-    background-color: transparent;
+.backgroundCanvas {
+    width: 100%;
+    height: 100%;
+    display: block;
 }
